--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.14.4"
 
 flutter_launcher_icons:
-    android: "launcher_icon"
+    android: true
     ios: true
     image_path: "assets/applogo.png"
 
